[project]
name = "atcoder"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "OJII3", email = "84656786+OJII3@users.noreply.github.com" }
]
dependencies = [
    "online-judge-tools>=11.5.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
